--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Happy Birthday Anku!</title>
+  <title>Anku Kumari</title>
+  <meta name="description" content="Hello, I am Anku Kumari an upcoming Front-End Engineer based in Bangalore. I build websites from scratch using HTML, CSS, JAVASCRIPT and other Front-End libraries and tools are also included in my workflow.">
+
+  <meta property="og:url" content="https://www.ankukumari.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Anku Kumari - upcoming Front-End Engineer">
+  <meta property="og:image" content="og-image.png">
+  <meta property="og:image:alt" content="Front-End developement technologies">
+  <meta property="og:description" content="Hello, I am Anku Kumari an upcoming Front-End Engineer based in Bangalore. I build websites from scratch using HTML, CSS, JAVASCRIPT and other Front-End libraries and tools are also included in my workflow.">
+  <meta property="og:site_name" content="Anku Kumari - upcoming Front-End Engineer" />
 
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="styles/system-fonts.css" media="all">
   <link rel="stylesheet" href="styles/style.css" media="all">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400&family=Sen:wght@400;700;800&display=swap" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
